--- a/home.html
+++ b/home.html
@@ -39,9 +39,14 @@
         </section>
     </main>
 
+    <!-- Back to Top Button -->
+    <button id="backToTop" class="back-to-top">↑ Back to Top</button>
+
     <!-- Footer -->
     <footer class="footer">
         <p>&copy; 2025 Responsive Webpage. All rights reserved.</p>
     </footer>
+
+    <script src="script.js"></script> <!-- Linking the external JavaScript file -->
 </body>
 </html>
